# celebritysite

./: .gitignore  README.md  pyproject.toml
celebritysite/: db.sqlite3  manage.py
celebritysite/celebritysite/: asgi.py  settings.py  urls.py  wsgi.py
celebritysite/women/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
celebritysite/women/migrations/: 0001_initial.py
celebritysite/women/static/css/: admin.css
celebritysite/women/templates/women/: about.html  addpage.html  base.html  index.html  login.html  post.html  register.html
celebritysite/women/templatetags/: women_tags.py
