[tool.poetry]
name = "celebritysite"
version = "0.1.0"
description = ""
authors = ["Evgeny Zakiev <zakiev_e@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
pytest = "^7.3.1"
pillow = "^9.5.0"
django-debug-toolbar = "^4.2.0"
django-simple-captcha = "^0.5.18"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
